# pxshot

./: Cargo.toml  LICENSE  README.md
src/: app.rs  clipboard.rs  lib.rs  main.rs  mode.rs
src/capture/: mod.rs
src/capture/linux/: mod.rs  x11.rs
src/capture/macos/: cg.rs  mod.rs
src/capture/window/: gdi.rs  mod.rs
src/overlay/: mod.rs  resize.rs  selected.rs  selecting.rs  toolbar.rs
src/tools/arrow/: config.rs  drawable.rs  mod.rs  panel.rs  types.rs
