[package]
name = "pxshot"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
anyhow = "1.0.100"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }


# ---------- Linux X11 ----------
[target.'cfg(all(unix, not(target_os="macos")))'.dependencies]
x11rb = "0.13.2"


# ---------- Windows ----------
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
] }

# ---------- macOS ----------
[target.'cfg(target_os="macos")'.dependencies]
core-graphics = "0.25.0"
core-foundation = "0.10.1"
